Add Actuator and Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/my_db?useSSL=false
 spring.datasource.password=bestuser
 spring.datasource.username=bestuser
+
+
+info.name = Spring Data Rest
+info.description = Spring Boot REST application. This app is used \
+  CRUD operations with employees in our company.
+
+management.endpoints.web.exposure.include=*
+
+spring.security.user.name=dmitriy
+spring.security.user.password=qwerty
